# memo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: memorize.md  recall.md
.claude/skills/memorize/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/recall-context/: SKILL.md
config/: mcp.json
hooks/: memo-auto-recall.sh  memo-auto-store.sh  memo-prework-recall.sh
src/memo/: auto_store.py  config.py  db.py  embeddings.py  hooks.py  main.py  models.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  api.js
ui/src/components/: BrowsePanel.jsx  DbSelector.jsx  HostSwitcher.jsx  MemoCard.jsx  MemoDetail.jsx  MemoEditor.jsx  SearchPanel.jsx
